# text-recognition

./: CLAUDE.md  Cargo.toml  Makefile  PLAN.md  README.md  TODO.md
.cargo/: config.toml
.claude/skills/methodical-dev/: SKILL.md
docs/: parametrage-tesseract.md
resources/: README.md
resources/expected/: img-1.txt  img-2.txt  img-3.txt  img-4.txt  img-5.txt
src/: config.rs  config_file.rs  hocr.rs  lib.rs  main.rs  metrics.rs  ocr.rs  preprocessing.rs
tests/: integration_tests.rs  metrics_tests.rs  preprocessing_tests.rs  psm_tests.rs
